<resources>
    <string name="msspa_auth_load_user_advice">Pulse aquí para acceder a sus datos guardados anteriormente</string>
    <string name="msspa_auth_enter_credentials">Introduzca sus datos</string>
    <string name="msspa_auth_nuhsa">Número de tarjeta sanitaria</string>
    <string name="msspa_auth_id">Documento de identificación:</string>
    <string name="msspa_auth_nuhsa_hint">Introduzca su nº de tarjeta</string>
    <string name="msspa_auth_select_id_type">Tipo documento</string>
    <string name="msspa_auth_id_hint">Introduzca su nº de documento aquí</string>
    <string name="msspa_auth_birthdate_hint" translatable="false">dd/mm/aaaa</string>
    <string name="msspa_auth_phone">Tel. móvil para verificación</string>
    <string name="msspa_auth_phone_hint">Introduzca su teléfono</string>
    <string name="msspa_auth_save_user">Recordar usuario</string>
    <string name="msspa_auth_save_user_advice">Marque esta casilla para guardar sus datos y usarlos la próxima vez</string>
    <string name="msspa_auth_enter">Entrar</string>
    <string name="msspa_auth_continue_validation">Continuar</string>
    <string name="msspa_auth_birthdate">Fecha de nacimiento</string>
    <string name="msspa_auth_nuhsa_helper">Puede encontrarlo en su tarjeta sanitaria</string>
    <string name="msspa_auth_error_birthday">Introduzca una fecha válida</string>
    <string name="msspa_auth_identifier_error">El documento de identificación no es válido</string>
    <string name="msspa_auth_dni_error">El DNI no es válido</string>
    <string name="msspa_auth_nie_error">El NIE no es válido</string>
    <string name="msspa_auth_error_nuhsa">Número de tarjeta sanitaria incorrecto</string>
    <string name="msspa_auth_error_prefix">Introduzca un código de país</string>
    <string name="msspa_auth_error_phone">El teléfono no es válido</string>
    <string name="msspa_auth_validate">Validar</string>
    <string name="msspa_auth_confirm">Confirmar</string>
    <string name="msspa_auth_validate_code">Código de validación</string>
    <string name="msspa_auth_enter_validate_code">Introduzca su código de validación</string>
    <string name="msspa_auth_enter_validate_code_explanation">Recuerde que puede actualizar su información de contacto en <a href="https://www.sspa.juntadeandalucia.es/servicioandaluzdesalud/clicsalud/pages/anonimo/personales/datoscontacto.jsf?opcionSeleccionada=MUCAMBIODATOSCONTACTO">ClicSalud+</a> o en su <a href="https://www.sspa.juntadeandalucia.es/servicioandaluzdesalud/el-sas/servicios-y-centros/informacion-por-centros">centro de salud</a>.</string>
    <string name="msspa_auth_unlock_error">Error al desbloquear</string>
    <string name="msspa_auth_user_prompt_title">Recuperar usuarios guardados</string>
    <string name="msspa_auth_pin_prompt_title">Recuperar pin guardado</string>
    <string name="msspa_auth_user_prompt_subtitle">Desbloquee su móvil para recuperar los usuarios guardados</string>
    <string name="msspa_auth_user_prompt_save_title">Guardar usuario</string>
    <string name="msspa_auth_user_prompt_save_subtitle">Desbloquee su móvil para guardar el usuario</string>
    <string name="msspa_auth_pin_prompt_save_title">Autenticar usuario</string>
    <string name="msspa_auth_pin_prompt_save_subtitle">Guardar PIN en almacén seguro</string>
    <string name="msspa_auth_validate_phone_title">Para acceder a esta funcionalidad es necesario comprobar su teléfono móvil.\n\nEl teléfono móvil que va a anotar tiene que constar como su contacto en el Servicio Andaluz de Salud.</string>
    <string name="msspa_auth_refresh_totp">Si no le ha llegado el código de validación, puede solicitar otro</string>
    <string name="msspa_auth_refresh">Renovar</string>
    <string name="msspa_auth_mobile_phone_validation_title">Validación de teléfono móvil</string>
    <string name="msspa_auth_other_auth_methods">Otros métodos de autenticación</string>
    <string name="msspa_auth_access_from_here_to_others">Acceda desde aquí a todos los métodos de autenticación disponibles</string>
    <string name="msspa_auth_mobile_phone_validation_message">Si el teléfono móvil anotado consta como su contacto en el Servicio Andaluz de Salud, recibirá un código de validación que tiene que introducir aquí.</string>
    <string name="cancel">Cancelar</string>
    <string name="accept">Aceptar</string>
    <string name="next">Siguiente</string>
    <string name="msspa_auth_dialog_error_message"></string>
    <string name="msspa_auth_dialog_error_title">Error</string>
    <string name="msspa_auth_dialog_info_title">Aviso</string>
    <string name="msspa_auth_dialog_info_message"></string>
    <string name="login_phone_help">Es necesario que el móvil que indica conste como teléfono de contacto en la base de datos del Servicio Andaluz de Salud. A ese teléfono se le enviará un código para completar el proceso de verificación de identidad. Puede actualizar su información de contacto en ClicSalud+.</string>
    <string name="login_qr_title">QR móvil</string>
    <string name="qr_code">Código QR</string>
    <string name="scan_qr">Escanee el código QR con este botón:</string>
    <string name="enter_qr_code">O introduzca el código aquí:</string>
    <string name="enter_dni">Introduzca su DNI</string>
    <string name="login_qr_help">¿Qué pasos debo realizar?\n\n1. Desde un dispositivo distinto acceda a la web %1$s con su Certificado digital o Cl@ve.\n\n2. En la web, seleccione \'Obtener código QR\'.\n\n3. En el formulario que aparecerá en la App, lea el código QR o introdúzcalo a mano junto a su documento de identificación.</string>
    <string name="login_dnie_help">Mediante su DNI3.0 y la tecnología NFC podrá autenticarse de un modo seguro en la aplicación para acceder a diferentes funcionalidades. Asegúrese de que su dispositivo dispone de la tecnología NFC y ésta está activada. Siga los siguientes pasos para completar con éxito la autenticación:\n\n1- Introduzca el número CAN que podrá encontrar en el frontal de su DNI3.0 y pulse Entrar.\n\n2- A continuación acerque, hasta que esté en contacto su DNI3.0 con la parte trasera de su dispositivo, y manténgalo.\n\n3- Le aparecerá una popup para que introduzca la clave del certificado contenido en su DNI3.0.\n\n4- Una vez introducida y comprobada la validez de la clave y del Certificado digital, aparecerá una alerta indicando el inicio de sesión, ya estará autenticado en la App y podrá acceder a todo el contenido durante un periodo máximo de 60 minutos.\n\n5 - Pulse Aceptar.</string>
    <string name="init_session">Iniciar sesión</string>
    <string name="missing_fields">Rellene todos los campos</string>
    <string name="define_pin">Definir PIN</string>
    <string name="msspa_auth_pin_text">Para futuros accesos sin necesidad de identificación, mientras dure su sesión, por favor establezca un código PIN de cuatro dígitos.</string>
    <string name="confirm_pin">Por favor, repita el PIN introducido.</string>
    <string name="different_pin">El PIN introducido es diferente al anterior.</string>
    <string name="session_pin_title">PIN de sesión</string>
    <string name="session_pin_subtitle">Introduzca el pin definido cuando inició sesión</string>
    <string name="pin_incorrect">El PIN introducido es incorrecto.</string>
    <string name="biometric_unlock">Desbloquear con huella</string>
    <string name="pin_unlock">Acceder con PIN</string>
    <string name="help_pin_dialog">El PIN sólo se utiliza en la aplicación móvil para futuros accesos, no está relacionado con Cl@ve o DNI electrónico.\n\nPara futuros accesos, además de con su PIN, podrá utilizar un control biométrico si es compatible con su dispositivo.</string>
    <string name="cancel_login">¿Desea cerrar sesión?</string>
    <string name="add_can">Introduzca su CAN</string>
    <string name="can_info">Información sobre CAN</string>
    <string name="dnie_title">Autenticación con DNI 3.0</string>
    <string name="dnie_comm">Comunicando con Dnie</string>
    <string name="dnie_connecting">Autenticando en @Firma…</string>
    <string name="dnie_safe_channel">estableciendo canal seguro…</string>
    <string name="not_nfc_supported">"Su teléfono móvil no tiene NFC o no está activado. "</string>
    <string name="dnie_getting_info">Obteniendo información…</string>
    <string name="dnie_start_connect">DNIe leído. Conectando…</string>
    <string name="scan_qr_mandatory_permission_dialog_message">Se necesita el permiso de acceso a la cámara para poder escanear el QR</string>
    <string name="scan_qr_error_dialog_message">El QR escaneado es erróneo. Asegúrese de que el QR es válido e inténtelo de nuevo</string>
    <string name="warning_authenticate_encryption">No ha sido posible verificar su identidad. Para acceder a esta funcionalidad es necesario verificar dicha identidad.</string>
    <string name="message_cipher_security_invalid">Sus credenciales de acceso al dispositivo han cambiado después de haber almacenado la información. Por su seguridad,se va a proceder a borrar la información almacenada. ¿Desea continuar?</string>
    <string name="message_invalid_login_data_qr"> Existe algún error en los datos introducidos. Por favor, revíselos e inténtelo de nuevo.</string>
    <string name="msspa_auth_qr_code_hint">Introduzca el código generado aquí</string>
    <string name="dialog_not_phone_secured">Para que esta funcionalidad esté disponible es necesario que habilite un mecanismo de seguridad &#40;biometría, patrón, pin&#46;&#46;&#46;&#41; en su dispositivo móvil. Podrá utilizarla tras cambiar su configuración.</string>
</resources>