<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:filterTouchesWhenObscured="true"
    android:theme="@style/Theme.MaterialComponents.Light">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/title_tv"
            style="@style/MSSPAAuthTitleText.Section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_section_default"
            android:layout_marginTop="@dimen/margin_default_double"
            android:layout_marginEnd="@dimen/margin_section_default"
            android:text="@string/login_qr_title"
            app:layout_constraintBottom_toTopOf="@id/title_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/qr_code_tv"
            style="@style/MSSPAAuthTitleText.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_section_default"
            android:layout_marginTop="@dimen/margin_section_default"
            android:layout_marginEnd="@dimen/margin_section_default"
            android:text="@string/qr_code"
            app:layout_constraintBottom_toTopOf="@id/qr_text_tv"
            app:layout_constraintEnd_toStartOf="@id/qr_help_iv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_tv" />

        <ImageView
            android:id="@+id/qr_help_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default_double"
            android:layout_marginEnd="@dimen/margin_section_default"
            android:src="@drawable/ic_info"
            app:layout_constraintStart_toEndOf="@id/qr_code_tv"
            app:layout_constraintTop_toTopOf="@id/qr_code_tv" />


        <TextView
            android:id="@+id/qr_text_tv"
            style="@style/MSSPAAuthSubtitleText.Black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_section_default"
            android:layout_marginTop="@dimen/margin_default_half"
            android:layout_marginEnd="@dimen/margin_section_default"
            android:text="@string/scan_qr"
            app:layout_constraintBottom_toTopOf="@id/qr_button_iv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/qr_code_tv" />


        <ImageView
            android:id="@+id/qr_button_iv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="@dimen/margin_default_double"
            android:layout_marginTop="@dimen/margin_section_default"
            android:layout_marginEnd="@dimen/margin_section_default"
            android:src="@drawable/ic_qr"
            app:layout_constraintBottom_toTopOf="@id/enter_code_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/qr_text_tv" />

        <TextView
            android:id="@+id/enter_code_tv"
            style="@style/MSSPAAuthTitleText.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_section_default"
            android:layout_marginTop="@dimen/margin_section_default"
            android:layout_marginEnd="@dimen/margin_section_default"
            android:text="@string/enter_qr_code"
            app:layout_constraintBottom_toTopOf="@id/qr_code_it"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/qr_button_iv" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/qr_code_it"
            style="@style/MSSPAAuthTextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_section_default"
            android:layout_marginTop="@dimen/margin_default_half"
            android:layout_marginEnd="@dimen/margin_section_default"
            android:hint="@string/msspa_auth_qr_code_hint"
            app:hintTextColor="@color/green_selected"
            app:layout_constraintBottom_toTopOf="@id/identifier_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_code_tv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/qr_code_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/identifier_tv"
            style="@style/MSSPAAuthTitleText.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_section_default"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_section_default"
            android:text="@string/msspa_auth_id"
            app:layout_constraintBottom_toTopOf="@id/identifier_type_it"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/qr_code_it" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/identifier_type_it"
            style="@style/MSSPAAuthTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_section_default"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_section_default"
            android:hint="@string/msspa_auth_select_id_type"
            app:hintTextColor="@color/green_selected"
            app:layout_constraintBottom_toTopOf="@id/identifier_it"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/identifier_tv">

            <es.juntadeandalucia.msspa.authentication.presentation.base.CustomAutoCompleteTextView
                android:id="@+id/identifier_type_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                android:focusableInTouchMode="false"
                android:inputType="textNoSuggestions"
                android:paddingStart="@dimen/auto_complete_text_view_padding"
                android:paddingTop="@dimen/selector_padding"
                android:paddingEnd="@dimen/auto_complete_text_view_padding"
                android:paddingBottom="@dimen/selector_padding" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/identifier_it"
            style="@style/MSSPAAuthTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_section_default"
            android:layout_marginTop="@dimen/margin_default_half"
            android:layout_marginEnd="@dimen/margin_section_default"
            android:hint="@string/msspa_auth_id_hint"
            app:hintTextColor="@color/green_selected"
            app:layout_constraintBottom_toTopOf="@id/login_bt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/identifier_type_it">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/identifier_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionDone"
                android:inputType="textNoSuggestions"
                android:maxLines="1"
                android:nextFocusForward="@id/birthday_et" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_bt"
            style="@style/MSSPAAuthPrimaryButton"
            android:layout_width="@dimen/button_width_default"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_huge_margin"
            android:layout_marginTop="@dimen/default_large_margin"
            android:layout_marginEnd="@dimen/default_huge_margin"
            android:layout_marginBottom="@dimen/margin_default_double"
            android:text="@string/init_session"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/identifier_it" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>