<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:filterTouchesWhenObscured="true"
    android:theme="@style/Theme.MaterialComponents.Light">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/title_tv"
            style="@style/MSSPAAuthTitleText.Section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_section_default"
            android:layout_marginTop="@dimen/margin_default_double"
            android:layout_marginEnd="@dimen/margin_section_default"
            android:text="@string/session_pin_title"
            app:layout_constraintBottom_toTopOf="@id/subtitle_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed"/>


        <TextView
            android:id="@+id/subtitle_tv"
            style="@style/MSSPAAuthTitleText.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_section_default"
            android:layout_marginTop="@dimen/margin_default_double"
            android:layout_marginEnd="@dimen/margin_section_default"
            android:layout_marginBottom="@dimen/margin_default"
            android:text="@string/session_pin_subtitle"
            app:layout_constraintBottom_toTopOf="@id/can_it"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_tv"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/can_it"
            style="@style/MSSPAAuthTextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_section_default"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_section_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subtitle_tv"
            app:layout_constraintBottom_toTopOf="@id/continue_bt"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pin_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continue_bt"
            style="@style/MSSPAAuthPrimaryButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_section_default"
            android:layout_marginTop="@dimen/default_extra_huge_margin"
            android:layout_marginEnd="@dimen/margin_section_default"
            android:enabled="false"
            android:gravity="center"
            android:paddingStart="@dimen/default_large_margin"
            android:paddingEnd="@dimen/default_large_margin"
            android:text="@string/msspa_auth_confirm"
            app:layout_constraintBottom_toTopOf="@id/cancel_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/can_it" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_btn"
            style="@style/MSSPAAuthSecondaryButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_section_default"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_section_default"
            android:layout_marginBottom="@dimen/default_huge_margin"
            android:gravity="center"
            android:paddingStart="@dimen/default_large_margin"
            android:paddingEnd="@dimen/default_large_margin"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/continue_bt"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>